# Server_priv

./: CMakeLists.txt
auth/: auth_server.c  authentication.c  authentication.h  test_auth.c  test_jwt.c
chat/: chat.c  chat.h  client  server  test_chat_client.c
chat/server/: Makefile  chat.c  chat.h  server  test_chat_server.c
client/: Makefile  SS_ui.c  client  test_chat_client.c
server/: Dockerfile  Makefile
server/auth/: .gdb_history
server/auth/src/: .gdb_history  auth_server  auth_server.c  authentication.c  authentication.h  peda-session-auth_server.txt  test_auth  test_auth.c
server/chat/: Makefile  start
server/chat/src/: chat.c  chat.h  client_handler.c  client_handler.h  debug_print.h  define.h  room.c  room.h  server  server.c  verify_jwt.c  verify_jwt.h
server/src/: chat.h  server.c
